--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
   <button id="calculate">Calculate</button>
 
   <div class="grid" id="results"></div>
-  <p class="note"><strong>Apples-to-apples:</strong> All three columns include a <strong>7% encashment fee</strong> (as charged by Travelex) so you can compare the effect of different exchange rates fairly. Interbank = mid‑market rate; High Street ≈ 10% worse than interbank; Travelex ≈ 20% worse than interbank.</p>
+  <p class="note"><strong>Apples-to-apples:</strong> All three columns include a <strong>7% encashment fee</strong> (as charged by Travelex) so you can compare the effect of different exchange rates fairly.<br>
+  Interbank = mid‑market rate; High Street ≈ 10% worse than interbank; Travelex ≈ 20% worse than interbank.</p>
 
   <script>
   async function fetchRate(base, target = 'GBP') {
